Amended mealplanenr web page

--- a/app/templates/main/mealplanner.html
+++ b/app/templates/main/mealplanner.html
@@ -3,10 +3,12 @@
 
 {% block content %}
     <h3>Meal Planner</h3>
+    <p>Use the Meal Planner to organise your meals for the week. You can also favourite recipes to make them easier to
+        find in the future.</p>
     <ol id="meal_planner_list">
         <li>
             <p>
-                 <b>Create a new mealplan</b>
+                <b>Create a new mealplan</b>
             </p>
             <button class="btn btn-primary btn-outline-light">Create</button>
         </li>
