--- a/app/templates/main/favourites.html
+++ b/app/templates/main/favourites.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Favourites{% endblock %}
+
+{% block head %}
+    <link href = "{{ url_for('static', filename='css/toastr.css') }}" rel = "stylesheet">
+{%  endblock %}
+
 {% block content %}
 
 <h3>{{ user.first_name }}'s favourite recipes</h3>
@@ -29,6 +34,7 @@
 
                     {# Buttons to add to mealplan/ favourites #}
                     {% if current_user.is_authenticated %}
+                    {#
                     <form action="{{ url_for('main.add_to_mealplan', recipe_id = result.recipe_id) }}"
                           method="post">
                         <input type="image" src="{{ url_for('static', filename='img/icons/more.png') }}"
@@ -41,7 +47,8 @@
                                alt="Add to Favourites" height="25" name="addToFavourites" class="btTxt submit"
                                id="saveForm"/>
                     </form>
-
+                    #}
+                    <button id="unfav{{result.recipe_id}}" onclick="ajax_unfav('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove Favourite</button>
                     {% endif %}
 
                 </div>
@@ -64,6 +71,22 @@
 <p>You haven't favourited any recipes! Check out the <a href="{{ url_for('main.recipes') }}">cookbook</a> to start
     discovering recipes.</p>
 {% endif %}
+{% endblock %}
 
+{% block footer %}
+    <script src="{{ url_for('static', filename='js/toastr.js') }}"></script>
+    <script>
 
+        function ajax_unfav(id, name) {
+            $.ajax({
+                url: "/remove_from_favourites/" + id, success: function (result) {
+                    if (result == 'success') {
+
+                        location.reload();
+                    }
+                }
+            });
+        }
+
+    </script>
 {% endblock %}
