--- a/app/templates/main/mealplanner.html
+++ b/app/templates/main/mealplanner.html
@@ -5,6 +5,7 @@
 <h3>Meal Planner</h3>
 <p>Use the Meal Planner to organise your meals for the week. You can also favourite recipes to make them easier to
     find in the future.</p>
+    <p>View your <a href="{{ url_for('main.mealplans_history') }}">old mealplans</a> if you want something familiar.</p>
 {#    {% if mealplan_active %}#}
 {#        <p>View your current mealplan here!</p>#}
 {#    {% endif %}#}
@@ -26,29 +27,6 @@
         <p>
             <b>Or select an existing one:</b>
         </p>
-        {% if mealplans|length %}
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th scope="col">No.</th>
-                <th scope="col">Date & Time created</th>
-                <th scopw="col"></th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for mealplan in mealplans %}
-            <tr>
-                <td>{{ mealplan.mealplan_id }}</td>
-                <td>{{ mealplan.created_at }}</td>
-                <td><a href="{{ url_for('main.delete_mealplan', mealplan_id=mealplan.mealplan_id) }}">Delete</a></td>
-            </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        
-        {% else %}
-        <p>Sorry, you do not currently have any mealplans</p>
-        {% endif %}
     </li>
     <li>
         <p>
