--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -10,14 +10,14 @@
             <form method=post novalidate>
                 {{ form.csrf_token }}
                 <dl>
-                    {{ wtf.form_field(form.first_name, class='form-control') }}
-                    {{ wtf.form_field(form.last_name, class='form-control') }}
-                    {{ wtf.form_field(form.email, class='form-control') }}
-                    {{ wtf.form_field(form.password, class='form-control') }}
-                    {{ wtf.form_field(form.confirm, class='form-control') }}
+                    {{ wtf.form_field(form.first_name, class='form-control', id= 'signup_first_name')}}
+                    {{ wtf.form_field(form.last_name, class='form-control', id= 'signup_last_name') }}
+                    {{ wtf.form_field(form.email, class='form-control', id= 'signup_email') }}
+                    {{ wtf.form_field(form.password, class='form-control', id= 'signup_password') }}
+                    {{ wtf.form_field(form.confirm, class='form-control', id= 'signup_confirm') }}
                 </dl>
                 <br>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button id='submit_button' type="submit" class="btn btn-primary">Sign Up</button>
             </form>
         </div>
     </div>
