only pull changes to html plz xx

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -12,8 +12,8 @@
                 {#        {{ render_field(form.email, class='form-control') }}#}
                 {#        {{ render_field(form.password, class='form-control') }}#}
                 {#        {{ render_field(form.remember_me) }}#}
-                {{ wtf.form_field(form.email, class='form-control') }}
-                {{ wtf.form_field(form.password, class='form-control') }}
+                {{ wtf.form_field(form.email, class='form-control', id='login-email') }}
+                {{ wtf.form_field(form.password, class='form-control', id='login-password') }}
                 {{ wtf.form_field(form.remember_me) }}
                 <input type=submit value='Login' class='btn btn-primary'>
             </dl>
