--- a/app/templates/main/search_results.html
+++ b/app/templates/main/search_results.html
@@ -19,7 +19,7 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
         {% for result in results %}
         <div class="col mb-4">
-            <div class="card">
+            <div class="card h-100">
                 <img class="card-img-top" src="{{ url_for('static', filename=('img/recipe_images/' + result.photo)) }}"
                      alt={{ result.recipe_name }}>
                 <div class="card-body">
