--- a/app/templates/main/search_results.html
+++ b/app/templates/main/search_results.html
@@ -2,7 +2,7 @@
 {% block title %}Search results{% endblock %}
 
 {% block head %}
-    <link href = "{{ url_for('static', filename='css/toastr.css') }}" rel = "stylesheet">
+<link href="{{ url_for('static', filename='css/toastr.css') }}" rel="stylesheet">
 {%  endblock %}
 
 {% block content %}
@@ -40,12 +40,21 @@
                     {# Buttons to add to mealplan/ favourites #}
                     {% if current_user.is_authenticated %}
 
-                    <button id="addto_mealplan{{result.recipe_id}}" onclick="ajax_addplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Add to Meal Plan</button>
-                    <button id="delfrom_mealplan{{result.recipe_id}}" onclick="ajax_delplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove from Meal Plan</button>
+                    <button id="addto_mealplan{{ result.recipe_id }}"
+                            onclick="ajax_addplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Add to Meal Plan
+                    </button>
+                    <button id="delfrom_mealplan{{ result.recipe_id }}"
+                            onclick="ajax_delplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove from Meal
+                        Plan
+                    </button>
                     <br>
                     <br>
-                    <button id="fav{{result.recipe_id}}" onclick="ajax_fav('{{result.recipe_id}}', '{{result.recipe_name}}')">Add Favourite</button>
-                    <button id="unfav{{result.recipe_id}}" onclick="ajax_unfav('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove Favourite</button>
+                    <button id="fav{{ result.recipe_id }}"
+                            onclick="ajax_fav('{{result.recipe_id}}', '{{result.recipe_name}}')">Add Favourite
+                    </button>
+                    <button id="unfav{{ result.recipe_id }}"
+                            onclick="ajax_unfav('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove Favourite
+                    </button>
 
                     {% endif %}
                 </div>
@@ -71,83 +80,71 @@
 {% endblock %}
 
 {% block footer %}
-    <script src="{{ url_for('static', filename='js/toastr.js') }}"></script>
-    <script>
-        function ajax_fav(id, name) {
-            $.ajax({
-                url: "/add_to_favourites/" + id, success: function (result) {
-                    if (result == 'success') {
+<script src="{{ url_for('static', filename='js/toastr.js') }}"></script>
+<script>
+    function ajax_fav(id, name) {
+        $.ajax({
+            url: "/add_to_favourites/" + id, success: function (result) {
+                if (result == 'success') {
 
-                        //$("#fav" + id).text("Remove Favourite");
-                        //$("#unfav" + id).attr("onclick", "ajax_unfav(id, name)")
+                    //$("#fav" + id).text("Remove Favourite");
+                    //$("#unfav" + id).attr("onclick", "ajax_unfav(id, name)")
 
-                        /* Use Toastr lib to display quick alerts
-                        Toastr is by Hans Fjällemark, John Papa & Tim Ferrell
-                        https://codeseven.github.io/toastr/ */
-                        toastr.success('Added ' + name + ' to favourites!')
-                    }
-
-                    else {
-                        toastr.error(name + ' is already in your favourites!')
-                    }
+                    /* Use Toastr lib to display quick alerts
+                    Toastr is by Hans Fjällemark, John Papa & Tim Ferrell
+                    https://codeseven.github.io/toastr/ */
+                    toastr.success('Added ' + name + ' to favourites!')
+                } else {
+                    toastr.error(name + ' is already in your favourites!')
                 }
-            });
-        }
+            }
+        });
+    }
 
-        function ajax_unfav(id, name) {
-            $.ajax({
-                url: "/remove_from_favourites/" + id, success: function (result) {
-                    if (result == 'success') {
+    function ajax_unfav(id, name) {
+        $.ajax({
+            url: "/remove_from_favourites/" + id, success: function (result) {
+                if (result == 'success') {
 
-                        toastr.warning('Removed ' + name + ' from your favourites!')
-                    }
-
-                    else{
-                        toastr.error(name + ' cannot be removed as it is not in your favourites!')
-                    }
+                    toastr.warning('Removed ' + name + ' from your favourites!')
+                } else {
+                    toastr.error(name + ' cannot be removed as it is not in your favourites!')
                 }
-            });
-        }
+            }
+        });
+    }
 
-        function ajax_addplan(id, name) {
-            $.ajax({
-                url: "/add_to_mealplan/" + id, success: function (result) {
-                    if (result == 'success') {
+    function ajax_addplan(id, name) {
+        $.ajax({
+            url: "/add_to_mealplan/" + id, success: function (result) {
+                if (result == 'success') {
 
-                        toastr.success('Added ' + name + ' to your meal plan!')
-                    }
-
-                    else if (result == 'failure') {
-                        toastr.error(name + ' is already in your meal plan!')
-                    }
-
-                    else {
-                        toastr.error('Cannot add recipe. Please create a meal plan first!')
-                    }
+                    toastr.success('Added ' + name + ' to your meal plan!')
+                } else if (result == 'failure') {
+                    toastr.error(name + ' is already in your meal plan!')
+                } else {
+                    toastr.error('Cannot add recipe. Please create a meal plan first!')
                 }
-            });
-        }
+            }
+        });
+    }
 
-        function ajax_delplan(recipe_id, name) {
+    function ajax_delplan(recipe_id, name) {
 
-            var mealplan_id = 'x';
+        var mealplan_id = 'x';
 
-            $.ajax({
-                url: "/del_from_mealplan/" + mealplan_id + '/' + recipe_id, success: function (result) {
-                    if (result == 'success') {
+        $.ajax({
+            url: "/del_from_mealplan/" + mealplan_id + '/' + recipe_id, success: function (result) {
+                if (result == 'success') {
 
-                        toastr.warning('Removed ' + name + ' from your meal plan!')
-                    }
-
-                    else if (result == 'failure') {
-                        toastr.error(name + ' cannot be removed as it is not in your meal plan!')
-                    }
-
-                    else {
-                        toastr.error('Cannot remove recipe as no meal plan exists. Please create a meal plan first!')
-                    }
+                    toastr.warning('Removed ' + name + ' from your meal plan!')
+                } else if (result == 'failure') {
+                    toastr.error(name + ' cannot be removed as it is not in your meal plan!')
+                } else {
+                    toastr.error('Cannot remove recipe as no meal plan exists. Please create a meal plan first!')
                 }
-            });
-        }
-    </script>
+            }
+        });
+    }
+</script>
 {% endblock %}
