-Updated credits for external js libraries

--- a/app/templates/main/advanced_search.html
+++ b/app/templates/main/advanced_search.html
@@ -30,6 +30,14 @@
 {% block footer %}
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
+        /* Use JQuery UI to create a 'two-headed slider'
+
+        Library: JQuery UI
+        Main Authors: Alex Schmitz, Jörn Zaefferer, Felix Nagel, Mike Sherov and Rafael Xavier de Souza
+        Date: 2020
+        Availability: https://jqueryui.com
+        Accessed: 12 April 2020 */
+
         $(function () {
             $("#slider-range").slider({
                 range: true,
