--- a/app/templates/main/search_results.html
+++ b/app/templates/main/search_results.html
@@ -44,8 +44,7 @@
                             onclick="ajax_addplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Add to Meal Plan
                     </button>
                     <button id="delfrom_mealplan{{ result.recipe_id }}"
-                            onclick="ajax_delplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove from Meal
-                        Plan
+                            onclick="ajax_delplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove from Meal Plan
                     </button>
                     <br>
                     <br>
