--- a/app/templates/main/search_results.html
+++ b/app/templates/main/search_results.html
@@ -44,13 +44,13 @@
                             onclick="ajax_addplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Add to Meal Plan
                     </button>
                     <button id="delfrom_mealplan{{ result.recipe_id }}"
-                            onclick="ajax_delplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove from Meal Plan
+                            onclick="ajax_delplan('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove from Meal
+                        Plan
                     </button>
                     <br>
                     <br>
                     <button id="fav{{ result.recipe_id }}"
-                            onclick="ajax_fav('{{result.recipe_id}}', '{{result.recipe_name}}')">Add Favourite
-                    </button>
+                            onclick="ajax_fav('{{result.recipe_id}}', '{{result.recipe_name}}')">Add Favourite</button>
                     <button id="unfav{{ result.recipe_id }}"
                             onclick="ajax_unfav('{{result.recipe_id}}', '{{result.recipe_name}}')">Remove Favourite
                     </button>
